--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run compile-utils",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile-utils": "npx tsc src/utils/update-stations.ts --outDir dist/utils --esModuleInterop",
+    "update-stations": "node dist/utils/update-stations.js"
   },
   "dependencies": {
     "@types/leaflet": "^1.9.20",
